# FIrstSearchEngine

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/Front_end/: search.html
src/python/: search_server.py
