[metadata]
license = MIT
license_files = license
classifier=
    Programming Language :: Python :: 3.12
    Programming Language :: HTML :: CSS
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >= 3.8

[options.package_data]
SearchEngine_cfg = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py

